第三方登陆

--- a/app/views/themes/waterfall/layouts/_user_fragment.html.erb
+++ b/app/views/themes/waterfall/layouts/_user_fragment.html.erb
@@ -38,6 +38,9 @@
   </div>
 <% else %>
   <ul>
+    <li class="sns">
+      <span>其它账号登陆：</span>
+    </li>
     <li>
       <%= link_to new_user_registration_path, :class => 'btn_green' do  %>
        <span>注册</span>
