--- a/public/template/cellar.html
+++ b/public/template/cellar.html
@@ -72,7 +72,8 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <h1>我的酒窖 <span class="font12">(共15支)</span></h1>
           </div>
           <div class="sort_search mb20">
-              <div class="float_r"><a href="cellar_wine_add_search.html" class="btn_blue_b"><span>添加藏酒</span></a></div>
+              <div class="float_r"><a href="#" class="btn_blue_b"><span>导出数据</span></a></div>
+              <div class="float_r mr5"><a href="cellar_wine_add_search.html" class="btn_blue_b"><span>添加藏酒</span></a></div>
               <div class="sort pt5">年份 <select name="">
                 <option>从新到老</option>
                 <option>从老到新</option>
