--- a/public/template/password_remail.html
+++ b/public/template/password_remail.html
@@ -41,32 +41,18 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     </div>
     <div id="wrapper950">
     	<div id="login">
-        	<div class="error">两次输入密码不一致</div>
             <div class="password">
                 <div class="logreg_box">
                     <div class="top2"></div>
                     <div class="mid">
                     	<div class="content">
-                        <h2>重置密码</h2>
-                        	<table width="90%" border="0" cellspacing="0" cellpadding="0">
-                              <tr>
-                                <td>当前密码</td>
-                                <td><div class="un"><input class="text"  name="" type="password" /></div></td>
-                              </tr>
-                              <tr>
-                                <td>新密码</td>
-                                <td><div class="un"><input class="text"  name="" type="password" /></div></td>
-                              </tr>
-                              <tr>
-                                <td>确认密码</td>
-                                <td><div class="un"><input class="text"  name="" type="password" /></div></td>
-                              </tr>
-                              <tr>
-                                <td>&nbsp;</td>
-                                <td><a class=" mr5" href="password_reset_success.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="提交" /></a><a href="#"><img src="images/common/btn_green_cancle.jpg" width="96" height="41" alt="取消" /></a></td>
-                              </tr>
-                            </table>
-                            </div>
+                        <h2>重发激活邮件</h2>
+                        <div class="clearfix">
+                          <div class="un float_l"><input class="text"  name="" type="password"  placeholder="请输入邮箱地址"/></div>
+                            <a class="float_l ml10" href="password_resetmail_notice.html"><img src="images/common/btn_submit.jpg" width="96" height="41" alt="登陆" /></a>
+                        </div>
+                        <div class="clear"></div>
+                        </div>
                     </div>
                     <div class="bot"></div>
                 </div>
