--- a/app/views/themes/waterfall/settings/update_password.html.erb
+++ b/app/views/themes/waterfall/settings/update_password.html.erb
@@ -2,39 +2,48 @@
 <% content_for :css do  %>
 <%= theme_stylesheet_link_tag "setting" %>
 <% end %>
-<div class="whitespace setting">
-  <h1 class="main_title">修改密码</h1>
-  <div id="stylized" class="myform">
-   <%= form_for @user, 
-   :validate => true, 
-   :url => url_for(:action => :update_password ), 
-   :html => { :method => :put, :id => :form } do |f| %>   
-   <%= f.hidden_field :reset_password_token %>
-   <div class="required">
-     <label><span>*</span>当前密码</label>
-     <%= f.password_field :current_password, :class => "text name" %>
-   </div>
 
-   <div class="required">
-     <label><span>*</span>新密码</label>
-     <%= f.password_field :password, :class => "text name" %>
-   </div>
-   <div class="required">
-     <label><span>*</span>确认密码</label>
-     <%= f.password_field :password_confirmation, :class => "text name" %>
-   </div>
-   <div class="mt10 optional">
-     <label>&nbsp;</label>
-     <div class="content">
-      <%= link_to "javascript:void(0)", :class => "btn_gray mr5", :onclick => "$(this).parents('form').submit()"  do %>
-      <span>保存</span>
-      <% end %>
-      <%= link_to basic_settings_path, :class => "btn_gray mr5"  do %>
-      <span>返回</span>
-      <% end %>
+<div id="login">
+  <div class="password">
+    <div class="logreg_box">
+      <div class="top2"></div>
+      <div class="mid">
+        <div class="content">
+          <h2>重置密码</h2>
+          <%= form_for @user, :validate => true, 
+            :url => url_for(:action => :update_password ), 
+            :html => { :method => :put, :id => :form } do |f| %>  
+            <table width="90%" border="0" cellspacing="0" cellpadding="0">
+              <%= f.hidden_field :reset_password_token %>
+              <tr>
+                <td>当前密码</td>
+                <td><div class="un"><%= f.password_field :current_password, :class => "text name" %></div></td>
+              </tr>
+              <tr>
+                <td>新密码</td>
+                <td><div class="un"><%= f.password_field :password, :class => "text name" %></div></td>
+              </tr>
+              <tr>
+                <td>确认密码</td>
+                <td><div class="un"><%= f.password_field :password_confirmation, :class => "text name" %></div></td>
+              </tr>
+              <tr>
+                <td>&nbsp;</td>
+                <td>
+                  <%= link_to "javascript:void(0)", :class => "mr5", 
+                     :onclick => "$(this).parents('form').submit()"  do %>
+                    <%= theme_image_tag("common/btn_submit.jpg", :width => "96", :height => "41", :alt => "提交") %>
+                  <% end %>
+                  <%= link_to basic_settings_path  do %>
+                    <%= theme_image_tag("common/btn_green_cancle.jpg", :width => "96", :height => "41", :alt => "取消") %>
+                  <% end %>
+                </td>
+              </tr>   
+            </table>
+          <% end %>
+        </div>
+      </div>
+      <div class="bot"></div>
     </div>
   </div>
-  <% end %>
-  <div class="clear"></div>
-  </div
 </div>
