--- a/public/template/password_reset.html
+++ b/public/template/password_reset.html
@@ -41,17 +41,24 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     </div>
     <div id="wrapper950">
     	<div id="login">
-        	<div class="error">两次输入密码不一致</div>
-            <div class="password">
-                <div class="logreg_box">
+    	  <div class="password">
+          <div class="logreg_box">
                     <div class="top2"></div>
                     <div class="mid">
                     	<div class="content">
                         <h2>重置密码</h2>
-                        	<table width="90%" border="0" cellspacing="0" cellpadding="0">
+                        	<div id="stylized">
+                            <table class="nor" width="90%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
                                 <td>当前密码</td>
-                                <td><div class="un"><input class="text"  name="" type="password" /></div></td>
+                                <td>
+                                    <div class="un">
+                                        <div class="field_with_errors">
+                                          <input class="text" name="" type="text"  />
+                                          <label class="message">当前密码错误</label>
+                                       </div>
+                                   </div>
+                              </td>
                               </tr>
                               <tr>
                                 <td>新密码</td>
@@ -67,6 +74,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                               </tr>
                             </table>
                             </div>
+                      </div>
                     </div>
                     <div class="bot"></div>
                 </div>
