--- a/app/views/themes/waterfall/settings/update_password.html.erb
+++ b/app/views/themes/waterfall/settings/update_password.html.erb
@@ -13,33 +13,35 @@
           <%= form_for @user, :validate => true, 
             :url => url_for(:action => :update_password ), 
             :html => { :method => :put, :id => :form } do |f| %>  
-            <table width="90%" border="0" cellspacing="0" cellpadding="0">
-              <%= f.hidden_field :reset_password_token %>
-              <tr>
-                <td>当前密码</td>
-                <td><div class="un"><%= f.password_field :current_password, :class => "text name" %></div></td>
-              </tr>
-              <tr>
-                <td>新密码</td>
-                <td><div class="un"><%= f.password_field :password, :class => "text name" %></div></td>
-              </tr>
-              <tr>
-                <td>确认密码</td>
-                <td><div class="un"><%= f.password_field :password_confirmation, :class => "text name" %></div></td>
-              </tr>
-              <tr>
-                <td>&nbsp;</td>
-                <td>
-                  <%= link_to "javascript:void(0)", :class => "mr5", 
-                     :onclick => "$(this).parents('form').submit()"  do %>
-                    <%= theme_image_tag("common/btn_submit.jpg", :width => "96", :height => "41", :alt => "提交") %>
-                  <% end %>
-                  <%= link_to basic_settings_path  do %>
-                    <%= theme_image_tag("common/btn_green_cancle.jpg", :width => "96", :height => "41", :alt => "取消") %>
-                  <% end %>
-                </td>
-              </tr>   
-            </table>
+            <div id="stylized">
+              <table class="nor" width="90%" border="0" cellspacing="0" cellpadding="0">
+                <%= f.hidden_field :reset_password_token %>
+                <tr>
+                  <td>当前密码</td>
+                  <td><div class="un"><%= f.password_field :current_password, :class => "text name" %></div></td>
+                </tr>
+                <tr>
+                  <td>新密码</td>
+                  <td><div class="un"><%= f.password_field :password, :class => "text name" %></div></td>
+                </tr>
+                <tr>
+                  <td>确认密码</td>
+                  <td><div class="un"><%= f.password_field :password_confirmation, :class => "text name" %></div></td>
+                </tr>
+                <tr>
+                  <td>&nbsp;</td>
+                  <td>
+                    <%= link_to "javascript:void(0)", :class => "mr5", 
+                       :onclick => "$(this).parents('form').submit()"  do %>
+                      <%= theme_image_tag("common/btn_submit.jpg", :width => "96", :height => "41", :alt => "提交") %>
+                    <% end %>
+                    <%= link_to basic_settings_path  do %>
+                      <%= theme_image_tag("common/btn_green_cancle.jpg", :width => "96", :height => "41", :alt => "取消") %>
+                    <% end %>
+                  </td>
+                </tr>   
+              </table>
+            </div>
           <% end %>
         </div>
       </div>
