--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -124,7 +124,7 @@
         <% end %>
 
         // Support Placeholder For All Browers
-        $('input[placeholder], textarea[placeholder]').placeholder();
+        // $('input[placeholder], textarea[placeholder]').placeholder();
       </script>
   </body>
 </html>
