--- a/app/views/themes/waterfall/wine_details/_new_form.html.erb
+++ b/app/views/themes/waterfall/wine_details/_new_form.html.erb
@@ -1,3 +1,16 @@
+<div id="query_outer">
+  <input type="text" name="query" id="query" value="" />
+</div>
+
+<script type="text/template" id="regiontree-template">
+ <ul id="gaggle-list">
+  <@ _.each(collection, function(goose) { @>
+     <li><@= goose.id @> <@= goose.name_en @></li>
+  <@ }); @>
+  </ul>
+</script>
+<div id="region_tree">
+</div>
 <%= form_for @register, :validate => true, :url => {:action => :create}, :method => :post ,:html => { :class => 'form-horizontal', :multipart => true } do |f| %>
     <% unless @register.new_record? %><input type="hidden" name="register_id" value="<%= @register.id %>"/><% end %>
     <div class="left">
@@ -11,7 +24,6 @@
       </div>
       <div class="required">
         <label><span>*</span>产区</label>
-        <div class="areas"><% if @read_only %><%=  @register.region_path_zh %> <% else %><%= render "region_tree" %><% end %></div>
       </div>
 
       <div class="required">
