--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -21,6 +21,8 @@ a:hover {text-decoration:underline;}
 img {border:none;}
 i {color:#ccc;}
 .mr5 {margin-right:5px;}
+.mr10 {margin-right:10px;}
+.mr20 {margin-right:20px;}
 .mb10 {margin-bottom:10px;}
 .mt5 {margin-top:5px;}
 .mt10 {margin-top:10px;}
@@ -108,12 +110,22 @@ input.common_search {width:250px;}
 #stylized button{clear:both;margin-left:150px;width:125px;height:31px;background:#666666 url(../css/img/button.png) no-repeat;text-align:center;line-height:31px;color:#FFFFFF;font-size:11px; font-weight:bold;}
 input.trader, input.name {width:250px;}
 input.price, input.g_type {width:70px;}
+input.date, input.time {width:100px;}
 input.count{width:30px;}
+input.tag {width:150px;}
 input.year, input.percent  {width:50px;}
 textarea.wine_intro {width:500px;height:200px;}
 #stylized label.w50 {width:50px;text-align:left;margin:0;}
 .form th, .form td {padding:5px;}
 label.vm {line-height:25px;}
+.daishou span.tips {display:inline-block;float:right;width:420px;}
+.btn_submit {text-align:center;padding: 30px 0 0 0;border-top:1px solid #ccc;}
+
+
+/*--------------form table----------*/
+table.form th, table.form td {padding:10px 10px;}
+table.form th {text-align:right;}
+
 
 /*----------login register---------*/
 #login {width:772px;margin:0 auto;padding-top:30px;}
@@ -180,9 +192,10 @@ a.icon_cellar {background-position:0 -190px;height:10px;width:10px;}
 .icon_tt_off {background-position:-28px -27px;}
 .icon_sina_off {background-position:-56px -27px;}
 a.icon_comment {background-position:0 -143px;padding-left:15px;}
-.icon_fol {background-position:3px -172px;padding-left:15px;color:#999;}
+.icon_fol {background-position:3px -204px;padding-left:15px;color:#999;}
 .icon_fol_e {background-position:1px -159px;padding-left:15px;color:#999;}
 .cancl_fol a {color:#a8bbc6;}
+.delet {background:url(../images/icon/delet.png) no-repeat left top;height:19px;width:19px;}
  
 /*--------------star style---------------*/
 .star_s0, .star_s1, .star_s2, .star_s3, .star_s4, .star_s5, .star_s_h, .star_s1_h, .star_s2_h, .star_s3_h, .star_s4_h, .star_s5_h {background:url(../images/icon/allstar.gif) no-repeat;display:inline-block;width:65px;height:12px;_height:7px;}
@@ -392,11 +405,29 @@ a.btn_green:hover span {background-position:right -92px;}
 .off a.btn_gray {color:#ccc;}
 .off a.btn_gray:hover {background-position:left top;text-decoration:none;color:#CCC;}
 .off a.btn_gray:hover span {background-position:right top;}
+a.btn_bluesky_b, a.btn_bluesky_b span, a.btn_bluesky_b:hover, a.btn_bluesky_b:hover span, a.btn_createvent, a.btn_createvent span, a.btn_createvent:hover, a.btn_createvent:hover span, a.btn_bluesky_b, a.btn_bluesky_b span, a.btn_bluesky_b:hover, a.btn_bluesky_b:hover span, a.btn_bluesky_s, a.btn_bluesky_s span, a.btn_bluesky_s:hover, a.btn_bluesky_s:hover span, a.btn_off_s, a.btn_off_s span, a.btn_off_s:hover, a.btn_off_s:hover span {background:url(../images/bg/bg_btn_style2.gif) no-repeat;}
+a.btn_createvent {background-position:left top;height:50px;display:inline-block;padding-left:11px;}
+a.btn_createvent span {background-position:right top;height:50px;line-height:50px;display:inline-block;color:#fff;font-size:16px;text-align:center;padding: 0 77px 0 66px;}
+a.btn_createvent:hover {background-position:left -50px;}
+a.btn_createvent:hover span {background-position:right -50px;}
+a.btn_bluesky_b {background-position:left top;height:50px;display:inline-block;padding-left:11px;}
+a.btn_bluesky_b span {background-position:right top;height:50px;line-height:50px;display:inline-block;color:#fff;font-size:16px;text-align:center;padding: 0 20px 0 9px;}
+a.btn_bluesky_b:hover {background-position:left -50px;}
+a.btn_bluesky_b:hover span {background-position:right -50px;}
+a.btn_bluesky_s {background-position:left -100px;height:40px;display:inline-block;padding-left:15px;}
+a.btn_bluesky_s span {background-position:right -100px;height:40px;line-height:40px;display:inline-block;color:#fff;font-size:14px;text-align:center;padding: 0 25px 0 10px;}
+a.btn_bluesky_s:hover {background-position:left -140px;}
+a.btn_bluesky_s:hover span {background-position:right -140px;}
+a.btn_off_s {background-position:left -180px;height:40px;display:inline-block;padding-left:15px;}
+a.btn_off_s span {background-position:right -180px;height:40px;line-height:40px;display:inline-block;color:#627d6e;font-size:14px;text-align:center;padding: 0 25px 0 10px;}
+a.btn_off_s:hover {background-position:left -220px;}
+a.btn_off_s:hover span {background-position:right -220px;}
+a.btn_bluesky_s:hover, a.btn_off_s span:hover {text-decoration:none;}
 
 
 /*------------box style---------------*/
-.wine_list .wine_info h2, .addwine .box .wine_info h2 {font-size:14px;}
-.wine_list .wine_info h3, .addwine .box .wine_info h3 {font-size:12px;font-weight:normal;color:#666;}
+.wine_list .wine_info h2, .addwine .box .wine_info h2, .box_ew .wine_info h2, .wine_select h2 {font-size:14px;}
+.wine_list .wine_info h3, .addwine .box .wine_info h3, .box_ew .wine_info h3, .wine_select h3 {font-size:12px;font-weight:normal;color:#666;}
 .box590 {margin: 0 0 10px 0;}
 .box590_t {background:url(../images/bg/bg_box590_t.gif) no-repeat left top;overflow:hidden;height:10px;}
 .box590_b {background:url(../images/bg/bg_box590_b.gif) no-repeat left bottom;height:20px;}
@@ -438,3 +469,63 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 .loading span {line-height:16px;}
 .indicator {display: block;font-size: 15px; position: fixed; text-align: center; z-index: 4;}
 #gototop {bottom: -31px; padding: 20px 10px 30px; right: 15px; width: 70px;}
+
+
+/*--------------loading pins----------*/
+.tags{
+	list-style:none;
+	}
+.tags li, .tags a{
+	float:left;
+	height:25px;
+	line-height:25px;
+	position:relative;
+	font-size:12px;
+	margin-bottom:5px;
+	display:inline-block;
+	}
+.tags a{
+	margin-left:20px;
+	padding:0 10px 0 12px;
+	background:#f3f3f3;
+	color:#663300;
+	text-decoration:none;
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;	
+	border-bottom-right-radius:4px;
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;	
+	border-top-right-radius:4px;	
+	} 
+.tags a:before{
+	content:"";
+	float:left;
+	position:absolute;
+	top:0;
+	left:-12px;
+	width:0;
+	height:0;
+	border-color:transparent #f3f3f3 transparent transparent;
+	border-style:solid;
+	border-width:12px 12px 12px 0;		
+	}
+.tags a:after{
+	content:"";
+	position:absolute;
+	top:10px;
+	left:0;
+	float:left;
+	width:4px;
+	height:4px;
+	-moz-border-radius:2px;
+	-webkit-border-radius:2px;
+	border-radius:2px;
+	background:#fff;
+	-moz-box-shadow:-1px -1px 1px #999;
+	-webkit-box-shadow:-1px -1px 1px #999;
+	box-shadow:-1px -1px 1px #999;
+	}
+.tags a:hover{background:#ffcc66;}	
+.tags a:hover:before{border-color:transparent #ffcc66 transparent transparent;}
+.tags li.select a {background:#ffcc66;color:#663300;}
+.tags li.select a:before {border-color:transparent #ffcc66 transparent transparent;border-style:solid;border-width:12px 12px 12px 0;}
