--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="winery_header">
    <div class="cover">
-     <%= winery_cover_tag(@winery, :thumb_name => :middle_x, :width => 360, :alt => @winery.origin_name) %>
+     <%= winery_cover_tag(@winery, :thumb_name => :middle_x, :alt => @winery.origin_name) %>
    </div>
 
    <div class="info">
