--- a/app/views/themes/waterfall/cellars/show.xls.erb
+++ b/app/views/themes/waterfall/cellars/show.xls.erb
@@ -8,29 +8,29 @@
     <Table>
       <Row>
         <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />年份</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />名称(中)</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />名称(英)</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />类型</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />容量</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />数量</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />购买时间</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />购入价格</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />所在地</Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" />适饮年限</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />名称(中)</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />名称(英)</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />类型</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />容量</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />数量</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />购买时间</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />购入价格</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />所在地</Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" />适饮年限</Data></Cell>
       </Row>
     <% @cellar_items.each do |item| %>
       <Row>
         <% wine_detail = item.wine_detail %>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= wine_detail.show_year %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= wine_detail.wine.name_zh %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= wine_detail.wine.name_en %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= wine_detail.wine.style.name_en %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= wine_detail.show_capacity %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= item.number %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= item.buy_date.strftime("%Y年%m月%d日") unless item.buy_date.blank? %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= number_to_currency(item.price,  :unit => "CNY") %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= item.location %></Data></Cell>
-        <Cell><Data ss:Type="String"><Font ss:FontName="songti" /><%= item.drinkable_begin.strftime("%Y年") %>~<%= item.drinkable_end.strftime("%Y年") %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= wine_detail.show_year %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= wine_detail.wine.name_zh %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= wine_detail.wine.name_en %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= wine_detail.wine.style.name_en %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= wine_detail.show_capacity %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= item.number %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= item.buy_date.strftime("%Y年%m月%d日") unless item.buy_date.blank? %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= number_to_currency(item.price,  :unit => "CNY") %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= item.location %></Data></Cell>
+        <Cell><Data ss:Type="String"><Font ss:FontName="宋体" /><%= item.drinkable_begin.strftime("%Y年") %>~<%= item.drinkable_end.strftime("%Y年") %></Data></Cell>
        </Row>
     <% end %>
     </Table>
