--- a/app/views/themes/waterfall/comments/share/_form.html.erb
+++ b/app/views/themes/waterfall/comments/share/_form.html.erb
@@ -23,12 +23,33 @@
 			<div class="clear"></div>
 			<a href="javascript:void(0)" class="btn_gray button"><span>加上去</span></a><br/>
 			分享评论到：<br/>
-			<input type="checkbox" checked="checked" name="sns_type[]" value="weibo"/>
-			<%= theme_image_tag "icon/icon_sina.gif", :alt => "新浪微博账号登陆", :width => "24", :height => "24" %>
-			<input type="checkbox" checked="checked" name="sns_type[]" value="qq"/>
-			<%= theme_image_tag "icon/icon_qq.gif", :alt => "QQ账号登陆", :width => "24", :height => "24" %>
-			<input type="checkbox" checked="checked" name="sns_type[]" value="douban"/>
-			<%= image_tag("http://img3.douban.com/pics/doubanicon-16.png") %>
+			<% if current_user && current_user.check_oauth?('weibo') %>
+				<input type="checkbox" checked="checked" name="sns_type[]" value="weibo"/>
+				<%= theme_image_tag "icon/icon_sina.gif", :alt => "新浪微博账号登陆", :width => "24", :height => "24" %>
+			<% else %>
+				<input type="checkbox" name="sns_type[]" value="weibo" class="share_weibo_checkbox" style="display:none"/>
+				<%= link_to user_omniauth_authorize_path(:weibo, :display => "popup"), :class => "sns_fancybox iframe" do %>
+					<%= theme_image_tag "common/icon_sina_off.png", :alt => "新浪微博账号登陆", :width => "24", :height => "24", :class => "share_weibo_image" %>
+				<% end %>
+			<% end %>
+			<% if current_user && current_user.check_oauth?('qq') %>
+				<input type="checkbox" checked="checked" name="sns_type[]" value="qq"/>
+				<%= theme_image_tag "icon/icon_qq.gif", :alt => "qq_weibo", :width => "24", :height => "24" %>
+			<% else %>
+				<input type="checkbox" name="sns_type[]" value="qq" class="share_qq_checkbox" style="display:none"/>
+				<%= link_to new_sns_friends_path(:sns_name => "qq"), :class => "sns_fancybox iframe" do %>
+					<%= theme_image_tag "common/icon_qq_off.png", :alt => "绑定腾讯微博", :width => "24", :height => "24", :class => "share_qq_image" %>
+				<% end %>
+			<% end %> 
+			<% if current_user && current_user.check_oauth?('douban') %>
+				<input type="checkbox" checked="checked" name="sns_type[]" value="douban"/>
+				<%= image_tag("http://img3.douban.com/pics/doubanicon-16.png") %>
+			<% else %>
+				<input type="checkbox" name="sns_type[]" value="douban" class="share_douban_checkbox" style="display:none"/>
+				<%= link_to new_sns_friends_path(:sns_name => "douban"), :class => "sns_fancybox iframe" do %>
+					<%= theme_image_tag "common/icon_douban_off.png", :alt => "绑定豆瓣", :width => "24", :height => "24", :class => "share_douban_image" %>
+				<% end %>
+			<% end %>
 			<br />
 			<span class="red text_error"></span>
 		</div>
