--- a/app/views/themes/waterfall/friends/sync.html.erb
+++ b/app/views/themes/waterfall/friends/sync.html.erb
@@ -27,3 +27,29 @@
     <% end %>
   </div>
 </div>
+<script type="text/javascript">
+  <% if params[:success] %>
+    var href = parent.$('iframe').attr('src');
+    alert(href);
+    var patt_weibo = new RegExp("weibo");
+    var patt_qq = new RegExp("qq");
+    var patt_douban = new RegExp('douban');
+    if (patt_weibo.test(href)){
+      parent.$('.share_weibo_checkbox').attr({checked: 'checked', style: 'display:inline'});
+      parent.$('.share_weibo_image').attr('src', '/assets/waterfall/images/icon/icon_sina.gif');
+    }else if (patt_qq.test(href)){
+      parent.$('.share_qq_checkbox').attr({checked: 'checked', style: 'display:inline'});
+      parent.$('.share_qq_image').attr('src', '/assets/waterfall/images/icon/icon_qq.gif');
+    }else if (patt_douban.test(href)){
+      parent.$('.share_douban_checkbox').attr({checked: 'checked', style: 'display:inline'});
+      parent.$('.share_douban_image').attr('src', '/assets/waterfall/images/common/icon_douban_on.png');
+    }
+    parent.$.fancybox.close();
+  <% end %>
+  //  parent.$.fancybox({
+  //   beforeClose:function() {
+  //     check_oauth_checkbox($(this)[0]['href']);
+  //   }
+  // });
+   // parent.$.fancybox.close();
+</script>
