--- a/app/views/themes/waterfall/layouts/application.html.erb
+++ b/app/views/themes/waterfall/layouts/application.html.erb
@@ -120,7 +120,7 @@
             });  
             setTimeout('getMessageCount()',6000);   
           }
-          getMessageCount();
+          // getMessageCount();
         <% end %>
 
         // Support Placeholder For All Browers
