--- a/public/template/wine_comment_detail.html
+++ b/public/template/wine_comment_detail.html
@@ -14,8 +14,8 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
 </head>
 
 <body>
-    <div id="header">
-<div class="main950">
+	<div id="header">
+    <div class="main950">
         	<div id="logo"><img src="images/common/logo.gif" alt="iWine" width="299" height="43" /></div>
             <form action="search.html">
                 <div id="top_search">
@@ -45,84 +45,103 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     <div id="wrapper950">
         <div id="wp_left">
         	<div class="wp_space_line top">
-            	<a href="wine_profile.html" class="btn_gray float_r"><span>返回</span></a><a href="wine_profile.html" class="btn_gray float_r mr5"><span>上传照片</span></a>
-                <h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒的照片</h1>
+            	<a href="wine_comment_list.html" class="btn_gray float_r"><span>返回所有评论</span></a>
+          <h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒的评论</h1>
                 <div class="clear"></div>
             </div>
-                <div class="wp_space_line ptb30">
-                <div class="album_left">
-            <div class="mb20">
-                <div class="pre_next"><span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a></div>
-            </div>
-            <div class="photo">
-                <img src="images/test/wine.jpg" width="164" height="610" alt="photo" />
-            </div>
-              <div class="info clearfix">
-            	<div class="like float_r"><a href="#" class="icon_like">赞 (3)</a></div>
-                <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
-                <div>10浏览 | 4评论</div>
-            </div>
-            <div class="comment">
-       	    <div class="mb20 clearfix">
-                <div class="title">
-                <a href="#01" class="btn_gray float_r"><span>添加评论</span></a>
-                <h3>评论</h3>
-                </div>
-              </div>
-              <ul class="comment_list">
-                	<li>
+        	<div class="wp_space_line ptb30">
+        	  <ul class="comment_list clearfix">
+        	    <li>
                     	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
                         <div class="main">
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
+                            <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(9)</a></div>
                         </div>
+                      <div class="clear"></div>
                     </li>
-                   <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                            <p><a href="#">回复</a> | <a href="#">删除</a></p>
-                        </div>
-                 </li>
-                    <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">
-                            好诱人的咖喱啊，我也好想吃！</div>
-                        </div>
-                    </li>
-                    <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                        </div>
-                    </li>
-                    <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                        </div>
-                    </li>
-                    <div class="clear"></div>
               </ul>
-               <div class="comment_post mt30">
-                       <a name="01" id="01"></a>
-                        <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                            <div class="post_main">
-                              <div class="post">
-                                  <textarea class="mb10" name="" cols="" rows=""></textarea>
-                              </div>
-                              <a href="#" class="btn_gray float_l mr10"><span>加上去</span></a><div class="com_s">同时发布到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_off.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a></div>
-                          </div>
-                             <div class="clear"></div>
+              <div class="clear"></div>
+            <div class="reply">
+            <div class="tabs">
+                  <ul>
+                    <li class="current"><a href="#">站内回复</a></li>
+                    <li><a href="#">站外回复</a></li>
+                  </ul>
               </div>
+              <ul class="reply_list clearfix">
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <div class="clear"></div>
+            </ul>
+            <div class="post clearfix">
+              <textarea name="" cols="" rows=""></textarea>
+                <p><a href="#" class="btn_gray"><span>回复</span></a></p>
+          </div>
+                <div class="clear"></div>
                 </div>
-                </div>
-            </div>
+        	</div>
           </div>
         <div id="wp_right">
           <div class="wp_count clearfix">
