--- a/public/template/stylesheets/wine.css
+++ b/public/template/stylesheets/wine.css
@@ -76,8 +76,11 @@ ul.photo_list li .intro, .album_left .photo .intro{margin:0 0 5px 0;}
 .album_left .info {margin-bottom:15px;color:#666;}
 .album_left .photo {text-align:center;margin-bottom:20px;background-color:#f3f3f3;}
 .album_left .comment_list .main {width:520px;}
-.album_left .post_main {width:410px;}
-.album_left .post_main textarea {width:390px;height:80px;background-color:#fff;}
+.album_left .post_main {width:470px;}
+.album_left .post_main textarea {width:490px;height:80px;background-color:#fff;}
+.post_main .com_s {flaot:left;width:300px;padding-top:3px;}
+.post_main .com_s a {display:inline-block;margin-right:10px;position:relative;}
+.com_s .sns_on {position:absolute;left:8px;top:8px;}
 .album_right h2 {margin:0 0 20px 0;}
 img.cover_s {background:url(../images/bg/bg_album_s.gif) no-repeat left top;padding:5px 8px 8px 5px;margin:0 0 5px 0;}
 .side_album_list li {margin:0 0 30px 0;}
