--- a/public/template/wine_comment_list.html
+++ b/public/template/wine_comment_list.html
@@ -61,38 +61,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         <div class="main">
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                             <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
-                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(3)</a></div>
-                                <div class="replybox">
-                                    	<div class="top"></div>
-                                        <div class="middle">
-                                        	<div class="post clearfix"><a href="#" class="btn_gray float_r"><span>回复</span></a><textarea name="" cols="" rows=""></textarea></div>
-                                            <ul class="reply_list clearfix">
-                                            	<li>
-                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                                                    <div class="main">
-                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                                                    <div class="main">
-                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                	<div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                                                    <div class="main">
-                                                    	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                                    </div>
-                                                </li>
-                                                <div class="clear"></div>
-                                            </ul>
-                                        </div>
-                                        <div class="botton"></div>
-                                    </div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="wine_comment_detail.html">回复(3)</a></div>
                             </div>
                       <div class="clear"></div>
                     </li>
@@ -101,7 +70,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         <div class="main">
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><!--<span class="control"><a href="#">回复</a> | <a href="#">删除</a></span>--></div>
                             <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈；</div>
-                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(1)</a></div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="wine_comment_detail.html">回复(1)</a></div>
                         </div>
                         <div class="clear"></div>
                   </li>
@@ -112,7 +81,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                             <div class="content">
                             <!--<p class="reply">好诱人的咖喱啊，我也好想吃！</p>-->
                           我比较喜欢意大利的酒，这款朋友送过，价格不贵，外包装看起来也挺高档的.</div>
-                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(0)</a></div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="wine_comment_detail.html">回复(0)</a></div>
                         </div>
                         <div class="clear"></div>
                     </li>
@@ -121,7 +90,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         <div class="main">
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><!--<span class="control"><a href="#">回复</a> | <a href="#">删除</a></span>--></div>
                             <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈；</div>
-                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(1)</a></div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="wine_comment_detail.html">回复(1)</a></div>
                         </div>
                         <div class="clear"></div>
                   </li>
@@ -202,6 +171,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                               <div class="post">
                                   <textarea class="mb10" name="" cols="" rows=""></textarea>
                               </div>
+                              <div class="com_s">同时发布到：<a href="#"><span class="sns_on"><img src="images/icon/r_g.png" width="14" height="14" /></span><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><span class="sns_on"><img src="images/icon/r_g.png" width="14" height="14" /></span><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_off.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a></div>
                           </div>
                              <div class="clear"></div>
               </div>
