--- a/public/template/winery_comment_detail.html
+++ b/public/template/winery_comment_detail.html
@@ -105,112 +105,99 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         	<div class="left">
                 <div class="section">
                 	<div class="title">
-                	  <a href="winery_profile.html" class="btn_gray float_r"><span>返回</span></a><a href="#01" class="btn_gray float_r mr5"><span>添加评论</span></a>
-              <h2>所有评论 <span class="font12 more">(共15条...)</span></h2></div>
+                	  <a href="winery_comment_list.html" class="btn_gray float_r"><span>返回所有评论</span></a>
+              <h2>评论</h2></div>
                     <div class="content">
-                    	<ul class="comment_list">
+                    	<ul class="comment_list clearfix">
                             <li>
                                 <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
                                 <div class="main">
                                     <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                                     <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
-                                    <p><a href="#">有用(12)</a> | <a href="winery_comment_detail.html">回复</a> | <a href="#">删除</a></p>
+                                    <p><a href="#">有用(12)</a> | <a href="#">回复</a> | <a href="#">删除</a></p>
                                 </div>
                             </li>
-                           <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" alt="username" /></a></div>
-                                <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                    <p><a href="#">有用(3)</a> | <a href="#">回复</a></p>
-                                </div>
-                          </li>
-                            <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></a></div>
-                                <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                                    <p><a href="#">有用(0)</a> | <a href="#">回复</a></p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                                <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
-                                    <p><a href="#">有用(12)</a> | <a href="#">回复</a></p>
-                                </div>
-                            </li>
-                           <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" alt="username" /></a></div>
-                                <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                    <p><a href="#">有用(3)</a> | <a href="#">回复</a></p>
-                                </div>
-                          </li>
-                            <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></a></div>
-                                <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                                    <p><a href="#">有用(0)</a> | <a href="#">回复</a></p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                              <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
-                                    <p><a href="#">有用(12)</a> | <a href="#">回复</a></p>
-                              </div>
-                            </li>
-                           <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/06.jpg" width="50" height="50" alt="username" /></a></div>
-                                <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                                    <p><a href="#">有用(3)</a> | <a href="#">回复</a></p>
-                                </div>
-                          </li>
-                            <li>
-                                <div class="userpic"><a href="#"><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></a></div>
-                                <div class="main">
-                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                                    <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                                    <p><a href="#">有用(0)</a> | <a href="#">回复</a></p>
-                                </div>
-                            </li>
-                            <div class="clear"></div>
                         </ul>
-                  <div class="pagination">
-                            <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
-                        </div>
-                      <div class="comment_post_star mt30">
-                       <a name="01" id="01"></a>
-                        <div class="evaluate">
-                        想给个评价么？
-                        <div class="star_rate">
-                        	<ul id="stars">
-                            	<li id="star_1" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
-                                <li id="star_2" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
-                                <li id="star_3" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
-                                <li id="star_4" class="star"><img src="images/icon/star_yellow.gif" width="16" height="16" /></li>
-                                <li id="star_5" class="star"><img src="images/icon/star_gray.gif" width="16" height="16" /></li>
-                            </ul>
-                        </div>
                         <div class="clear"></div>
-                         <a href="#" class="btn_gray"><span>加上去</span></a>
-                        </div>
-                        <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                            <div class="post_main">
-                              <div class="post">
-                                  <textarea class="mb10" name="" cols="" rows=""></textarea>
-                              </div>
-                              <div class="com_s">同时发布到：<a href="#"><span class="sns_on"><img src="images/icon/r_g.png" width="14" height="14" /></span><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_off.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a></div>
-                          </div>
-                             <div class="clear"></div>
+                        <div class="reply">
+            <div class="tabs">
+                  <ul>
+                    <li class="current"><a href="#">站内回复</a></li>
+                    <li><a href="#">站外回复</a></li>
+                  </ul>
               </div>
+              <ul class="reply_list clearfix">
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <div class="clear"></div>
+            </ul>
+            <div class="post clearfix">
+              <textarea name="" cols="" rows=""></textarea>
+                <p><a href="#" class="btn_gray"><span>回复</span></a></p>
+          </div>
+                <div class="clear"></div>
+                </div>
                     </div>
                 </div>
         	</div>
